# citeo

./: .dockerignore  .env.example  .gitignore  AUTHENTICATION.md  CLAUDE.md  Dockerfile  README.md  README.zh.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
docs/: DATABASE.md  DEPLOYMENT_CHECKLIST.md  DOCKER_DEPLOYMENT.md  WEB_VIEW_USAGE.md
docs/superpowers/specs/: 2026-04-16-admin-papers-page-design.md
examples/: README.md  smart_client.py
scripts/: API_TEST_RESULTS.md  check_swagger.py  clear_database.py  migrate_scoring.py  run_daily.py  test_api.py  test_api_http.py  test_by_date_api.py  test_d1_real.py  test_database_switch.py  test_db_switch.py  test_limit.py  test_tracing.py  test_web_view.py
src/citeo/: __init__.py  exceptions.py  main.py  scheduler.py
src/citeo/ai/: __init__.py  agents.py  pdf_analyzer.py  selector.py  summarizer.py
src/citeo/api/: __init__.py  admin_routes.py  auth_routes.py  routes.py
src/citeo/auth/: __init__.py  api_key.py  combined.py  dependencies.py  exceptions.py  jwt_auth.py  models.py  rate_limiter.py  signed_url.py  signed_url_d1.py  token_storage.py
src/citeo/config/: settings.py
src/citeo/models/: __init__.py  feed.py  paper.py
src/citeo/notifiers/: __init__.py  base.py  factory.py  feishu.py  multi.py  telegram.py
src/citeo/parsers/: __init__.py  arxiv_parser.py  base.py
src/citeo/services/: __init__.py  paper_service.py  pdf_service.py
src/citeo/sources/: __init__.py  arxiv.py  base.py
src/citeo/storage/: __init__.py  (+4 more)
tests/: conftest.py
tests/api/: test_admin_routes.py
(+7 files in other folders)
