[project]
name = "citeo"
version = "0.1.0"
description = "arXiv RSS subscription with AI summarization and Telegram push"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

dependencies = [
    # HTTP client
    "httpx>=0.27.0",

    # RSS parsing
    "feedparser>=6.0.10",

    # Data validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # AI processing
    "openai-agents>=0.0.1",

    # Telegram
    "python-telegram-bot>=21.0",

    # Scheduling
    "apscheduler>=3.10.0",

    # Database
    "aiosqlite>=0.19.0",

    # Logging
    "structlog>=24.1.0",

    # PDF processing
    "pymupdf>=1.23.0",

    # API
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",

    # Web templates
    "jinja2>=3.1.0",
    "markdown>=3.5.0",

    # Authentication
    "PyJWT>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.scripts]
citeo = "citeo.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/citeo"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
